--- a/starter-kit/package.json
+++ b/starter-kit/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.2",
     "sequelize": "^6.7.0",
